[tool.poetry]
name = "decisionos"
version = "0.1.0"
description = "Production-grade AI decision intelligence system"
authors = ["DecisionOS Team"]
readme = "README.md"
packages = [{include = "decisionos", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI for high-performance async API
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

# Pydantic v2 for robust data validation and settings management
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"

# Async database stack (PostgreSQL)
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# Background worker infrastructure (Celery + Redis)
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"

# Core utilities
structlog = "^24.1.0"  # Structured logging for observability
tenacity = "^8.2.3"    # robust retry logic
httpx = "^0.26.0"      # async http client

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"       # Fast linting/formatting
mypy = "^1.8.0"       # Static type checking
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuration for tools ensuring code quality
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["E501"] # Line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src"
